--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,23 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
+@layer components {
+    .container {
+        @apply w-11/12 md:w-5/6 lg:w-3/4 xl:w-1/2
+    }
+    .button {
+        @apply text-white font-semibold bg-[#556ff2]
+        border-2 border-[#556ff2] rounded-lg
+        py-1 px-2 mt-3
+        hover:bg-white hover:text-[#556ff2]
+    }
+    .createTodoInput {
+        @apply mb-5 border-2 py-2 px-3
+    }
+}
+
